--- a/src/app/account/login/login.component.html
+++ b/src/app/account/login/login.component.html
@@ -7,19 +7,20 @@
                     <img src="assets/images/logo-full.png" alt="" class="mb-05">
                     <p class="text-muted m-0">Sign in to your account</p>
                 </div>
-                <form novalidate>
-                    <div class="form-filed-container">
-                        <mat-icon>person</mat-icon>
-                        <mat-form-field class="full-width">
-                                <input matInput placeholder="Username">
-                        </mat-form-field>
-                    </div>
+                <form #loginForm novalidate>
+                    <mat-form-field class="full-width">
+                        <mat-icon matPrefix>person</mat-icon>
+                        <input matInput placeholder="User name or email">
+                    </mat-form-field>
                     
                     <mat-form-field class="full-width">
-                            <input matInput placeholder="Password">
+                        <mat-icon matPrefix>lock</mat-icon>
+                        <input matInput placeholder="Password">
                     </mat-form-field>
-                    <mat-checkbox class="pb-1">Remember this computer</mat-checkbox>
-                    <button type="button" mat-raised-button class="mat-primary full-width mb-1">Sign in</button>
+                    <section class="section-container">
+                        <mat-checkbox>Remember this computer</mat-checkbox>
+                        <button type="button" mat-raised-button class="mat-primary mb-1">Sign in</button>
+                    </section>
                 </form>
             </mat-card-content>
         </mat-card>
