--- a/src/app/account/languages/languages.component.html
+++ b/src/app/account/languages/languages.component.html
@@ -7,15 +7,17 @@
          <i class="{{language.icon}}"></i></a>
   </li>
 </ul> -->
-
-
-
-<mat-grid-list cols="10" rowHeight="20">
-  <mat-grid-tile><a><div class="famfamfam-flags cn"></div></a></mat-grid-tile>
-  <mat-grid-tile><a><div class="famfamfam-flags cn"></div></a></mat-grid-tile>
-  <mat-grid-tile><a><div class="famfamfam-flags cn"></div></a></mat-grid-tile>
-  <mat-grid-tile><a><div class="famfamfam-flags cn"></div></a></mat-grid-tile>
-</mat-grid-list>
+<div class="languages-container">
+  <mat-grid-list  [cols]="languages.length" rowHeight="20">
+    <mat-grid-tile *ngFor="let language of languages" >
+        <a href="javascript:void();"
+          title="{{language.displayName}}"
+          (click)="changeLanguage(language.name)">
+          <div class="{{language.icon}}"></div></a>
+      <!-- <div class="famfamfam-flags cn"></div> -->
+    </mat-grid-tile>
+  </mat-grid-list>
+</div>
 
 <!-- 
 <mat-grid-list cols="4" rowHeight="100px">
