--- a/src/app/account/login/login.component.html
+++ b/src/app/account/login/login.component.html
@@ -5,22 +5,17 @@
 <form #loginForm="ngForm" novalidate [formGroup]="loginModel" (ngSubmit)="login()">
         <mat-form-field class="full-width">
             <mat-icon matPrefix>person</mat-icon>
-            <!-- <input required matInput [(ngModel)]="loginService.authenticateModel.userNameOrEmailAddress" name="userNameOrEmailAddress" placeholder="{{l('UserNameOrEmail')}}" #userNameOrEmailAddress="ngModel"> -->
             <input required matInput formControlName="userNameOrEmailAddress" placeholder="{{l('UserNameOrEmail')}}">
-            <!-- <mat-error *ngIf="userNameOrEmailAddress.errors && (userNameOrEmailAddress.dirty || userNameOrEmailAddress.touched) && (userNameOrEmailAddress.errors.required)" >
-                {{getErrorMessage()}}
-            </mat-error> -->
+            <mat-error>{{userNameOrEmailAddressErrorMessage()}}</mat-error>
         </mat-form-field>
-    
         <mat-form-field class="full-width">
             <mat-icon matPrefix>lock</mat-icon>
-            <!-- <input matInput [(ngModel)]="loginService.authenticateModel.password" name="password" placeholder="{{l('Password')}}"> -->
             <input type="password" required matInput formControlName="password" placeholder="{{l('Password')}}">
+            <mat-error>{{passwordErrorMessage()}}</mat-error>
         </mat-form-field>
         <section class="section-container">
             <mat-checkbox formControlName="rememberMe">{{l("RememberMe")}}</mat-checkbox>
-            <!-- <mat-checkbox [(ngModel)]="loginService.rememberMe" name="rememberMe">{{l("RememberMe")}}</mat-checkbox> -->
-            <button type="submit" mat-raised-button class="mat-primary mb-1">Sign in</button>
+            <button type="submit" mat-raised-button class="mat-primary mb-1">{{l("LogIn")}}</button>
         </section>
 </form>
         
