--- a/src/app/account/account.component.html
+++ b/src/app/account/account.component.html
@@ -1,6 +1,6 @@
 <div class="page-wrap height-100 mat-bg-primary">
   <div class="session-form-hold">
-      <mat-progress-bar mode="determinate" class="session-progress"></mat-progress-bar>
+      <mat-progress-bar [mode]="submitting?'indeterminate':'determinate'" class="session-progress"></mat-progress-bar>
       <mat-card>
           <mat-card-content>
               <router-outlet></router-outlet>
