--- a/src/assets/styles/css/globals.css
+++ b/src/assets/styles/css/globals.css
@@ -21,11 +21,11 @@ body {
     height: 100%;
     margin: 0;
     padding: 0;
-    font-weight: 400;
+    /* font-weight: 400;
     font-size: .875rem;
     color: rgba(0,0,0,.87);
     line-height: 1.5;
-    font-family: "Roboto",Helvetica Neue,sans-serif;
+    font-family: "Roboto",Helvetica Neue,sans-serif; */
 }
 div {
     box-sizing: border-box;
