--- a/src/styles.scss
+++ b/src/styles.scss
@@ -4,6 +4,7 @@
 @import './assets/styles/css/globals.css';
 @import './assets/styles/css/account.css';
 @import './assets/styles/css/common.css';
+@import './assets/styles/css/main-sidenav.css';
 
 
 /*---- Loader ----*/
