--- a/src/assets/styles/css/main-sidenav.css
+++ b/src/assets/styles/css/main-sidenav.css
@@ -1,99 +1,49 @@
-/* .sidebar-panel.mat-sidenav .mat-nav-list .sidebar-list-item .mat-list-item-content {
-    font-size: .875rem !important;
-    display: block;
+.sidebar-panel.mat-sidenav {
+    width: 15rem;
+    min-width: 15rem;
+    box-shadow: 0 3px 1px -2px rgba(0,0,0,.2), 0 2px 2px 0 rgba(0,0,0,.14), 0 1px 5px 0 rgba(0,0,0,.12);
+}
+
+.sidebar-panel.mat-sidenav .mat-nav-list .sidebar-list-item .mat-list-item-content{
+    flex-wrap: wrap;
+    padding: 0 !important;
+}
+
+.sidebar-panel.mat-sidenav .sidebar-list-item {
     overflow: hidden;
-    height: auto;
-    padding: 0;
-    width: 100%;
-    height: 40px;
-    -webkit-transition: max-height .3s cubic-bezier(.35, 0, .25, 1);
-    transition: max-height .3s cubic-bezier(.35, 0, .25, 1);
+
 }
 
-.sidebar-panel .mat-nav-list a {
-    position: relative;
-    display: -webkit-box;
-    display: -ms-flexbox;
-    display: flex;
-    -webkit-box-orient: horizontal;
-    -webkit-box-direction: normal;
-    -ms-flex-direction: row;
-    flex-direction: row;
-    -webkit-box-align: center;
-    -ms-flex-align: center;
-    align-items: center;
-    height: 40px;
-    padding: 0 16px 0 0;
-    z-index: 99;
-} */
-/* .mat-nav-list .mat-list-item-content.mat-list-item-focus, .mat-nav-list .mat-list-item-content:hover {background: transparent; }
-.sidebar-list-item.open > .mat-list-item-content {
-    background: rgba(0, 0, 0, .03);
+.mat-nav-list{
+    padding: 0 !important; 
 }
 
-.sidebar-panel .mat-nav-list a {
-    position: relative;
-    display: -webkit-box;
-    display: -ms-flexbox;
-    display: flex;
-    -webkit-box-orient: horizontal;
-    -webkit-box-direction: normal;
-    -ms-flex-direction: row;
-    flex-direction: row;
-    -webkit-box-align: center;
-    -ms-flex-align: center;
-    align-items: center;
-    height: 40px;
-    padding: 0 16px 0 0;
-    z-index: 99;
-} */
+.sidebar-panel.mat-sidenav .sidebar-list-item.open {
+    /* max-height: 1000px; */
+    overflow: visible;
+}
 
-/* .sidebar-panel.mat-sidenav .sidebar-list-item mat-icon:not(.menu-caret) {
+.sidebar-list-item mat-icon:not(.menu-caret) {
     text-align: center;
     margin-right: 3px;
     height: 40px;
     width: 40px;
-    line-height: 48px;
+    line-height: 40px;
     border-left: 3px solid;
     border-color: transparent;
-} */
+}
 
-/* .sidebar-panel.mat-sidenav .sidebar-list-item mat-icon.menu-caret {
-    float: right;
+.sidebar-panel.mat-sidenav .sidebar-list-item mat-icon.menu-caret {
     -webkit-transform: rotate(0deg);
     transform: rotate(0deg);
     -webkit-transition: all .3s cubic-bezier(.35,0,.25,1);
     transition: all .3s cubic-bezier(.35,0,.25,1);
-} */
-
-/* .sidebar-panel .mat-nav-list a {
-   
-    width:100%;
-    flex-grow: 1;
-    height: 40px;
-    overflow: hidden;
+}
+.sidebar-panel.mat-sidenav .sidebar-list-item.open mat-icon.menu-caret {
+    -webkit-transform: rotate(180deg);
+    transform: rotate(180deg);
 }
 
-.sidebar-panel .mat-nav-list .sidebar-list-item a {
-    display: flex;
-    flex-direction: row;
-    flex-wrap: wrap;
-    justify-content: flex-start;
-    align-items: stretch;
-    align-content:stretch;
-    flex-grow: 1;
-    height: 40px;
-} */
-
-/* .sidebar-panel .mat-nav-list a {
-    display: flex;
-    width:100%;
-    height:40px;
- }
-
-  */
-
-
-  .sidebar-panel .mat-nav-list .sidebar-list-item a {
-   display: block;
-} 
+.sub-menu .mat-list-item-content > a {
+    line-height: 40px;
+}
