--- a/src/styles.scss
+++ b/src/styles.scss
@@ -5,6 +5,7 @@
 @import './assets/styles/css/account.css';
 @import './assets/styles/css/common.css';
 @import './assets/styles/css/main-sidenav.css';
+@import './assets/styles/css/collapsed-sidenav.css';
 
 
 /*---- Loader ----*/
