--- a/src/styles.scss
+++ b/src/styles.scss
@@ -5,8 +5,9 @@
 @import './assets/styles/css/account.css';
 @import './assets/styles/css/common.css';
 @import './assets/styles/css/main-sidenav.css';
+@import './assets/styles/css/top-bar.css';
 @import './assets/styles/css/collapsed-sidenav.css';
-
+@import './assets/styles/css/third-pirty-adjust.css';
 
 /*---- Loader ----*/
 .app-loader {
