--- a/src/app/core/layouts/admin-layout/admin-layout.component.html
+++ b/src/app/core/layouts/admin-layout/admin-layout.component.html
@@ -1,9 +1,11 @@
 <mat-sidenav-container class="app-side-nav-container">
-  <mat-sidenav
-  #sidenav [opened]="!isNavOver()"
-  [mode]="isNavOver() ? 'over' : 'side'"
+  <mat-sidenav #sidenav 
+  [opened]="!isNavOver()" 
+  [mode]="isNavOver() ? 'over' : 'side'" 
   class="sidebar-panel">
     <core-navigation></core-navigation>
   </mat-sidenav>
+  <core-topbar [sidenav]="sidenav"></core-topbar>
   <router-outlet></router-outlet>
 </mat-sidenav-container>
+
