--- a/src/assets/styles/css/globals.css
+++ b/src/assets/styles/css/globals.css
@@ -1,7 +1,4 @@
-/*---- Globals -----*/
-html {
-    font-size: 16px;
-}
+
 html, body {
     width: 100%;
     height: 100%;
@@ -21,18 +18,14 @@ body {
     height: 100%;
     margin: 0;
     padding: 0;
-    /* font-weight: 400;
-    font-size: .875rem;
     color: rgba(0,0,0,.87);
-    line-height: 1.5;
-    font-family: "Roboto",Helvetica Neue,sans-serif; */
+    /* line-height: 1.5; */
+    /* font-family: "Roboto",Helvetica Neue,sans-serif; */
 }
 div {
     box-sizing: border-box;
 }
-.mat-card {
-    font-size: .875rem;
-}
+
 a, a:focus, a:hover {
     text-decoration: none;
 }
