--- a/src/assets/styles/css/main-sidenav.css
+++ b/src/assets/styles/css/main-sidenav.css
@@ -4,26 +4,53 @@
     box-shadow: 0 3px 1px -2px rgba(0,0,0,.2), 0 2px 2px 0 rgba(0,0,0,.14), 0 1px 5px 0 rgba(0,0,0,.12);
 }
 
-.sidebar-panel.mat-sidenav .mat-nav-list .sidebar-list-item .mat-list-item-content{
-    flex-wrap: wrap;
-    padding: 0 !important;
+.sidebar-panel.mat-sidenav .mat-nav-list .sidebar-list-item .mat-list-item-content {
+    display: block;
+    height: auto;
+    padding: 0;
+    width: 100%;
+    -webkit-transition: max-height .3s cubic-bezier(.35, 0, .25, 1);
+    transition: max-height .3s cubic-bezier(.35, 0, .25, 1);
 }
 
 .sidebar-panel.mat-sidenav .sidebar-list-item {
+    max-height: 40px;
     overflow: hidden;
-
+    -webkit-transition: all .3s cubic-bezier(.35,0,.25,1);
+    transition: all .3s cubic-bezier(.35,0,.25,1);
 }
-
-.mat-nav-list{
-    padding: 0 !important; 
-}
-
 .sidebar-panel.mat-sidenav .sidebar-list-item.open {
-    /* max-height: 1000px; */
+    max-height: 1000px;
     overflow: visible;
 }
+.sidebar-panel.mat-sidenav .sidebar-list-item.open > .mat-list-item-content > .sub-menu {
+    max-height: 1000px;
+}
+.sidebar-panel.mat-sidenav .sidebar-list-item .sub-menu {
+    padding: 0;
+    -webkit-transition: max-height .3s cubic-bezier(.35,0,.25,1);
+    transition: max-height .3s cubic-bezier(.35,0,.25,1);
+    border-left: 3px solid transparent;
+}
 
-.sidebar-list-item mat-icon:not(.menu-caret) {
+.sidebar-panel .mat-nav-list a {
+    position: relative;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: horizontal;
+    -webkit-box-direction: normal;
+    -ms-flex-direction: row;
+    flex-direction: row;
+    -webkit-box-align: center;
+    -ms-flex-align: center;
+    align-items: center;
+    height: 40px;
+    padding: 0 16px 0 0;
+    z-index: 99;
+}
+
+.sidebar-panel.mat-sidenav .sidebar-list-item mat-icon:not(.menu-caret) {
     text-align: center;
     margin-right: 3px;
     height: 40px;
@@ -32,7 +59,6 @@
     border-left: 3px solid;
     border-color: transparent;
 }
-
 .sidebar-panel.mat-sidenav .sidebar-list-item mat-icon.menu-caret {
     -webkit-transform: rotate(0deg);
     transform: rotate(0deg);
@@ -44,6 +70,6 @@
     transform: rotate(180deg);
 }
 
-.sub-menu .mat-list-item-content > a {
-    line-height: 40px;
+.sidebar-panel.mat-sidenav .sub-menu a {
+    padding-left: 54px;
 }
