--- a/src/app/core/topbar/topbar.component.html
+++ b/src/app/core/topbar/topbar.component.html
@@ -19,12 +19,36 @@
     </button>
 
     <span fxFlex></span>
-
-    <mat-form-field style="width:80px;line-height:30px;">
-        <mat-select id="langToggle">
+    <mat-form-field style="width:100px;">
+        <mat-select class="dropdown">
             <mat-option *ngFor="let lang of availableLangs" [value]="lang.code">
-                {{ lang.name }}
+            {{ lang.name }}
             </mat-option>
         </mat-select>
     </mat-form-field>
+    <!-- Theme Switcher -->
+  <button 
+  mat-icon-button
+  id="schemeToggle" 
+  [style.overflow]="'visible'"
+  matTooltip="Color Schemes"
+  [matMenuTriggerFor]="themeMenu">
+    <mat-icon>format_color_fill</mat-icon>
+  </button>
+  <mat-menu #themeMenu="matMenu">
+    <mat-grid-list
+    class="theme-list" 
+    cols="2" 
+    rowHeight="48px">
+      <mat-grid-tile 
+      *ngFor="let theme of egretThemes"
+      (click)="changeTheme(theme)">
+        <div mat-menu-item [title]="theme.name">
+          <div [style.background]="theme.baseColor" class="egret-swatch"></div>
+          <mat-icon class="active-icon" *ngIf="theme.isActive">check</mat-icon>
+        </div>
+      </mat-grid-tile>
+    </mat-grid-list>
+  </mat-menu>
+   
 </mat-toolbar>
