--- a/src/app/account/account.component.html
+++ b/src/app/account/account.component.html
@@ -1,4 +1,4 @@
-<div class="page-wrap height-100 mat-bg-primary">
+<div class="page-wrap mat-bg-primary">
   <div class="session-form-hold">
       <mat-progress-bar [mode]="submitting?'indeterminate':'determinate'" class="session-progress"></mat-progress-bar>
       <mat-card>
@@ -9,3 +9,5 @@
       <account-languages></account-languages>
   </div>
 </div>
+<shared-theme-switcher class="fab-button"></shared-theme-switcher>
+
