--- a/src/assets/styles/css/account.css
+++ b/src/assets/styles/css/account.css
@@ -2,7 +2,7 @@
 .page-wrap {
     display: flex;
     align-items: center;
-    padding: 40px 1rem;
+    /* padding: 40px 1rem; */
     height: 100%;
 }
 .session-progress {
