--- a/src/assets/styles/css/common.css
+++ b/src/assets/styles/css/common.css
@@ -2,6 +2,11 @@
 .full-width {
     width: 100% !important;
 }
+
+.form-field .mat-form-field-subscript-wrapper
+{
+   overflow: visible !important;
+}
 /* .bg-none {
     background: transparent !important;
 }
