--- a/src/assets/styles/css/common.css
+++ b/src/assets/styles/css/common.css
@@ -7,6 +7,10 @@
 {
    overflow: visible !important;
 }
+
+.text-center {
+    text-align: center;
+}
 /* .bg-none {
     background: transparent !important;
 }
